# mov_agg

./: pyproject.toml
src/mov_agg/: .u.py.swp  u.py
tests/: test_agg.py
